Footer refurbished. Overflow/scroll solved. Started to manage the 4 pictures

--- a/scss/abstract/_reset.scss
+++ b/scss/abstract/_reset.scss
@@ -5,13 +5,7 @@
 
 // BASE
 
-html {
-  width: 100%;
-  height: 100%;
-}
-
 body {
-  width: 100%;
   max-width: 1440px;
   height: auto;
   box-sizing: border-box;
