--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,14 +61,13 @@
 
 /* BASE */
 
-// html {
-//   width: 100%;
-//   height: 100%;
-// }
+html {
+  width: 100%;
+}
 
 body {
-  // width: 100%;
-  max-width: 1440px;
+  width: 100%;
+  max-width: 767px;
   height: auto;
   box-sizing: border-box;
   margin: 0;
@@ -177,8 +176,8 @@ ol {
   margin: 0;
   padding: 0;
   display: flex;
-  grid-gap: 15px;
-  gap: 15px;
+  grid-gap: 0;
+  gap: 0;
   list-style-type: none;
 }
 
@@ -234,7 +233,6 @@ body {
 // 2.3 | HEADING : SEARCH
 
 #location {
-  width: 310px;
   font-size: $font-size-primary;
   background-color: $light-grey;
   border: none;
@@ -394,6 +392,13 @@ body {
   filter: invert(100%);
 }
 
+.text-transf {
+  font-family: $font-family-secondary;
+  font-size: $font-size-tertiary;
+  color: $color-white;
+  padding: 20px 0;
+}
+
 /*.icone--length {
 }*/
 
@@ -401,13 +406,19 @@ ul {
   padding-bottom: $padding-big;
 }
 
+.nav__link {
+  padding: 5px 0;
+}
+
 // Position and color of text
 .text--length {
   padding-left: $padding-small;
+  font-size: $font-size-quaternary;
 }
 
 .footer__text--color {
   color: $color-white;
+  font-size: $font-size-quaternary;
 }
 
 /* Container for the two first cards*/
@@ -444,7 +455,7 @@ ul {
 
 figure {
   // width: 600px;
-  max-width: 90%;
+  max-width: 90.9%;
   // height: 28vh;
   object-fit: cover;
   border-radius: 17px;
@@ -479,44 +490,44 @@ figure {
 
 #img-first {
   width: 100%;
-  height: 123%;
+  // height: 123%;
   object-fit: cover;
   border-radius: 17px 17px 0px 0px;
   position: relative;
-  top: 50%;
-  transform: translate( 0, -60%);
+  top: 20%;
+  // transform: translate( 0, -60%);
 }
 
 #img-second {
   width: 100%;
-  height: 130%;
+  // height: 130%;
   object-fit: cover;
   border-radius: 17px 17px 0px 0px;
   position: relative;
-  top: 50%;
-  transform: translate( 0, -63%);
+  top: 20%;
+  // transform: translate( 0, -63%);
 }
 
 #img-third {
   width: 100%;
-  height: 130%;
+  // height: 130%;
   object-fit: cover;
   border-radius: 17px 17px 0px 0px;
   position: relative;
-  top: 50%;
-  transform: translate( 0, -63%);
+  top: 20%;
+  // transform: translate( 0, -63%);
 }
 
 #img-forth {
   width: 100%;
-  height: 142%;
+  // height: 142%;
   /* height: 123%;  exactement conforme maquette*/
   object-fit: cover;
   border-radius: 17px 17px 0px 0px;
   position: relative;
-  top: 50%;
+  top: 20%;
   /* transform: translate( 0, -60%); exactement conforme maquette*/
-  transform: translate( 0, -66%);
+  // transform: translate( 0, -66%);
 }
 
 // Sticker on card
@@ -792,3 +803,4 @@ footer {
   padding-left: 5%;
   background: $color-dark;
 }
+
